[package]
name = "gen-bls-key"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Tesfamichael <alex.tesfamichael@gmail.com>"]
description = "A command-line tool for generating BLS12-381 keys and deriving public keys from private keys"
license = "MIT"
repository = "https://github.com/alextes/gen-bls-key"
readme = "README.md"
keywords = ["bls", "cryptography", "cli", "key-generation"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
blst = "0.3"
rand = "0.9"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
